# interview-coach

./: README.md
client/: README.md  env.example  index.html  package-lock.json  package.json
client/src/: app.js  config.js  style.css
server/: Dockerfile  README.md  bot.py  config_server.py  env.example  interview_config.json  pcc-deploy.toml  pyproject.toml
