[project]
name = "simple-chatbot"
version = "0.1.0"
description = "Simple chatbot built with Pipecat"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "loguru>=0.7.3",
    "pipecat-ai[daily,deepgram,elevenlabs,google,groq,openai,runner,silero,webrtc]>=1.0.0",
    "pipecatcloud>=0.4.4",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
